Improve the logic for the service